# uva-qrp-1

./: .pre-commit-config.yaml  CLAUDE.md  README.md  algorithm-1-README.md  pyproject.toml
.github/workflows/: ci.yml
algorithm-1/: README.md  algorithm-1.ipynb  qi-testing.ipynb  toffoli.nb
algorithm-1/lib/: __init__.py  clifford_tester.py  clifford_tester_sampled.py  expected_acceptance_probability.py  gates.py  jobs.py  measurements.py  qi_transpilation.py  result_collection.py  unitaries.py
algorithm-1/lib/clifford_tester/: gates.py  (+4 more)
algorithm-1/scripts/: 01b_standard_unitaries_tuna_result_comparison.py  02_how_many_n_qubit_cliffords.py  03_num_shots_time_comparison_tuna_9.py  04_can_we_sample_a_subset_of_weyl_operators.py  05_circuit_depth_vs_noise.py  06_test_rz_clifford_various_thetas.py  collect_full_results_for_standard_unitaries.py  collect_rz_clifford.py  draw_clifford_tester_circuit.py  expected_acceptance_probability.py  freeze_new_stim_clifford.py  how_many_n_qubit_cliffords.py  is_the_batched_algorithm_actually_better.py  plot_rz_clifford.py  run_harness.py
algorithm-1/tests/: __init__.py  test_expected_acceptance_probability.py  test_gates.py  utils.py
results/depth_vs_acceptance/: state.json
results/rz_clifford/: qi_tuna_9.json
results/shot_timing/: results.json
results/tht_increasing_k/: results.txt
results/weyl_subset_sampling/: results.json
scripts/: 01_collect_full_results_for_standard_unitaries.py  01b_standard_unitaries_tuna_result_comparison.py  01c_graph_standard_unitaries.py  02_how_many_n_qubit_cliffords.py  03_num_shots_time_comparison_tuna_9.py  03a_increasing_num_shots_increases_accuracy.py  04_can_we_sample_a_subset_of_weyl_operators.py  05_circuit_depth_vs_noise.py  06_test_rz_clifford_various_thetas.py  07_kth_clifford_hierarchy_test.py  08_tht_increasing_k.py  09_draw_4_hadamard_3_cnot_qi_transpiled.py  09_draw_standard_unitaries.py  10_summarise_clifford_tester_results.py  11_decompose_cnot.py  12_example_qiskit_circuit.py  13_draw_clifford_tester_circuit.py  draw_clifford_tester_circuit.py  freeze_new_stim_clifford.py  random_unitary_decomposition.py
src/cliff_lib/: __init__.py  backends.py  expected_acceptance_probability.py  jobs.py  result_collection.py
tests/: test_expected_acceptance_probability.py  test_gates.py  test_kth_clifford_tester.py
(+174 files in other folders)
