[project]
name = "uva-qrp-1"
version = "0.1.0"
description = "Practical quantum-hardware verification: testing the Clifford hierarchy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "qiskit>=2.1.2",
    "qiskit-aer>=0.17.2",
    "qiskit-quantuminspire>=0.15.0",
]
