[project]
name = "uva-qrp-1"
version = "0.1.0"
description = "Practical quantum-hardware verification: testing the Clifford hierarchy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qiskit>=2.1.2",
    "qiskit-quantuminspire>=0.15.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pylatexenc>=2.10",
    "pytest>=9.0.2",
    "qiskit-aer>=0.17.2",
]
