[project]
name = "uva-qrp-1"
version = "0.1.0"
description = "Practical quantum-hardware verification: testing the Clifford hierarchy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "qiskit>=2.1.2",
    "qiskit-quantuminspire>=0.16",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pylatexenc>=2.10",
    "pytest>=9.0.2",
    "qiskit-aer>=0.17.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["algorithm-1/lib"]

[tool.pytest.ini_options]
pythonpath = ["algorithm-1"]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (can reduce readability)
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "E402",   # module import not at top (common in notebooks)
    "F401",   # unused imports (exploratory code)
    "B018",   # useless expression (notebooks display last expression)
    "E741",   # ambiguous variable name
]
"tests/*" = [
    "B011",   # assert false
]

[tool.ruff.lint.isort]
known-first-party = ["lib"]
